--- a/期末论文选题.md
+++ b/期末论文选题.md
@@ -1,27 +1,28 @@
 # 期末论文选题 (提交截止时间：第16周周末, 2025年6月14日)
+论文暂定标题  
+《非齐次边界条件下波动、输运与稳态方程的数值求解及方法对比》  
 
-请填写如下内容
 
-1. **论文暂定标题**
-   
-   [填入你们小组暂定题目]
+小组成员及分工初步设想  
+- 李尚金：波动方程的模型建立、显式有限差分法代码实现及结果分析  
+- 刁正勇：输运方程的隐式格式求解、边界条件处理及稳定性验证  
+- 何芳州：稳态方程的SOR与多重网格法实现、收敛性对比及可视化
+- 刘睿：协助其他三位组员工作，论文格式的排版与校对
 
-3. **小组成员及分工初步设想**
-   
-   [填入你们小组成员及初步分工]
 
-5. **问题描述:** 要研究的物理问题是什么？其背后的物理背景和控制方程是什么？
-   
-   [填入简要问题描述，200字以内]
+问题描述: 要研究的物理问题是什么？其背后的物理背景和控制方程是什么？  
+研究一维机械波传播（波动方程）、物质对流-扩散过程（输运方程）及二维稳态场分布（泊松方程）的非齐次边界条件问题。物理背景包括弦振动、流体输运、静电场等。控制方程分别为含非齐次边界的波动方程、输运方程及泊松方程，需处理位移、浓度、电势等物理量在边界的非零值约束。  
 
-7. **研究目标:** 计划通过模拟得到什么结果？希望验证或探索什么物理现象？
-   
-   [填入研究目标，200字以内]
 
-9. **拟采用的数值方法:** 简述计划使用的核心计算方法。
-    
-   [填入拟采用的数值方法，200字以内]
+研究目标: 计划通过模拟得到什么结果？希望验证或探索什么物理现象？  
+通过显式/隐式有限差分法、SOR及多重网格法求解方程，对比不同方法的稳定性、收敛效率及精度。验证波动传播的CFL稳定性条件，探索输运方程对流-扩散主导机制，验证稳态方程解析解与数值解的一致性，分析非齐次边界对物理场分布的影响。  
 
-11. **参考文献:** 列出至少3篇相关的参考书籍或文献。
-    
-   [填入参考文献]
+
+拟采用的数值方法: 简述计划使用的核心计算方法。  
+采用有限差分法（显式蛙跳格式、Crank-Nicolson隐式格式）求解波动与输运方程，通过三对角矩阵求解器处理隐式格式；稳态方程使用逐次超松弛迭代法（SOR）与多重网格法（V-Cycle），结合虚拟点法处理Neumann边界条件，通过残差收敛性判断迭代终止。  
+
+
+参考文献: 列出至少3篇相关的参考书籍或文献。  
+[1] 彭芳麟. 计算物理基础[M]. 北京: 高等教育出版社, 2010.  
+[2] 叶其孝. 反应扩散方程简介[J]. 数学的实践与认识, 1984(2):48-56.  
+[3] 周顺兴. 解二维和三维抛物型偏微分方程绝对稳定的差分格式[J]. 计算数学, 1980(1):90-99.
